Fix card-list and sidebar not aligning
Both the sidebar and the card list were in each new line.
The problem was resolve when both sidebar and card-list
were grouped together in its own container.
Margin-bottom: auto prevented the sidebar from fully
filling the space below it.

--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -37,7 +37,12 @@ body {
   width: 300px;
   background: royalblue;
   box-sizing: border-box;
-  margin-bottom: auto;
+  gap: 32px;
+}
+
+.content-container{
+  display: flex;
+  flex: 1;
 }
 
 .card-list{
@@ -61,4 +66,9 @@ ul , a {
   list-style-type: none;
   color: white;
   font-size: 24px;
+}
+
+
+li {
+  margin-bottom: 16px;
 }
